# btc-price-ticker

./: .gitignore  Cargo.toml  README.md  config.example.toml  makefile
etc/launchers/osx/: com.user.orb-price-ticker.plist
