[package]
name = "orb_price_ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version = "1.35.0", features = ["full"] }
log = "0.4"
anyhow = "^1.0.42"
lazy_static = "1.4"
toml = "0.5"
num-format = "0.4.4"
dirs = "3.0"